--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "prebuild": "yarn clean && yarn format",
         "build": "microbundle-crl --no-compress --format modern,cjs --css-modules false",
         "predeploy": "cd example && yarn install && yarn run build",
-        "deploy": "gh-pages -d example/build"
+        "deploy": "gh-pages -d example/build",
+        "prepare": "npm run build"
     },
     "husky": {
         "hooks": {
