--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "nepali-datepicker-reactjs",
-    "version": "1.1.4",
+    "name": "@hemantachhami19/nepali-datepicker-reactjs",
+    "version": "1.1.5",
     "description": "Nepali Datepicker (Bikram Sambat) as a ReactJS component",
     "keywords": [
         "nepali date picker",
